--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<!-- saved from url=(0022)http://localhost:8000/ -->
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>JHipster Documentation Archive</title>
-  </head>
-  <body>
-    <h2>JHipster Documentation Archive</h2>
-    <hr />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JHipster Documentation Archive</title>
+  <link rel="stylesheet" href="/documentation-archive/assets/css/main.css">
+</head>
+<body>
+    <header class="topbar">
+       <div class="topbar-wrapper">
+          <img class="topbar-logo" src="/documentation-archive/assets/images/logo-jhipster.svg" alt="JHipster logo">
+          <h1 class="topbar-title">JHipster Documentation Archive</h1>
+       </div>
+    </header>
 
-    <ul>
+    <ul class="list">
       <li><a href="/documentation-archive-v1-to-v5/v0.17.0/">v0.17.0/</a></li>
       <li><a href="/documentation-archive-v1-to-v5/v0.18.0/">v0.18.0/</a></li>
       <li><a href="/documentation-archive-v1-to-v5/v0.18.1/">v0.18.1/</a></li>
@@ -224,9 +229,18 @@
       <li><a href="v8.7.2/">v8.7.2/</a></li>
       <li><a href="v8.7.3/">v8.7.3/</a></li>
     </ul>
-    <hr />
+
+    <footer class="footer">
+      <span id="copyright"></span>
+    </footer>
 
     <!-- JavaScript -->
+     <script defer>
+      (function() {
+        document.querySelector('#copyright').innerHTML = `&copy; 2013-${new Date().getFullYear()} JHipster`;
+      })()
+     </script>
+
     <script>
       (function (i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
